# Record_your_focus

./: .env.example  .gitignore  CHECKLIST.md  GETTING_STARTED.md  MIGRATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  README_OLD_PYQT.md  TODO  analysis_agent.py  config.py  gui_config.json  main.py  main_gui.py  native_host.py  pyproject.toml  requirements.txt  screenshot_agent.py  storage.py  workflow.py
backend/: README.md  pyproject.toml
backend/app/: main.py
browser_extension/chrome/: README.md  background.js  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js
browser_extension/chrome/icons/: README.md
browser_extension/native_host/: README.md  com.activity_recorder.host.json  install.py  native_host_launcher.bat  native_host_launcher.sh
frontend/: README.md  app.js  index.html  package-lock.json  package.json  styles.css
frontend/src/: App.jsx  index.css
gui/: __init__.py  config_manager.py  main_window.py  settings_dialog.py  time_query_widget.py
gui/widgets/: __init__.py  activity_list.py  screenshot_preview.py  status_widget.py
scripts/: quick_start.sh
web_dashboard/: .gitignore  README.md  index.html  package-lock.json  package.json
web_dashboard/src/: App.css  App.jsx  index.css
web_dashboard/src/components/: Layout.css  Layout.jsx
web_dashboard/src/pages/: Activities.css  Activities.jsx  Dashboard.css  Dashboard.jsx  Settings.css  Settings.jsx  TimeQuery.css  TimeQuery.jsx
website/: index.html  script.js  style.css
